assets/stylesheets/sass/dock.sass
@use "variables" as vars
@use "mixins" as mix

// Dock [max] width
// = number of apps in dock * (dock icon width) + 2 * (dock padding)
// = $dock-items-count * vars.$dock-icon-size + 2 * vars.$padding
// = $dock-items-count * vars.$dock-icon-size + vars.$padding-2x
// = calc(($dock-items-count * vars.$dock-icon-size) + (2 * $dock-padding))
// *= 1.05 (make 5% larger)

// [Max] badge height is dock height
// = 2 * (dock padding) + dock icon height
// = 2 * (vars.$padding) + vars.$dock-icon-size
// = vars.$padding-2x + vars.$dock-icon-size

$dock-border-radius: 1.6rem
$dock-padding: vars.$padding
$dock-items-count: 8.5 // = 7 apps + divider (counted as 0.5) + 1 trash = 7 + 0.5 + 1
$microtip-font-size: 1.35rem
$microtip-bg-color: rgba(47, 48, 46, .88) // When updating this var, manually modify SVG fill as well
$badge-max-height: calc((2 * $dock-padding) + vars.$dock-icon-size) //10rem
$badge-width: 12rem
$badge-opacity: 0.57

// Default (dark mode) colors for 'Not by AI' badge
:root
  --badge-fill: #FFF
  --badge-background: #000
  --badge-stroke: #ACACAC

// Light mode colors for 'Not by AI' badge
@media (prefers-color-scheme: light)
  :root
    --badge-fill: #000
    --badge-background: #FFF
    --badge-stroke: #000

// 'Not by AI' badge
#not-ai, #not-ai-container
  height: auto
  max-height: $badge-max-height

#not-ai
  display: flex
  width: $badge-width
  cursor: vars.$pointer-cursor
  margin: 0 calc(vars.$padding-one-and-half + vars.$border-thickness) // Original padding + close button left offset + button border thickness

  &-close
    position: absolute
    top: calc($microtip-font-size / 3.75) //0
    left: vars.$padding
    width: $microtip-font-size
    height: $microtip-font-size
    background: vars.$secondary-button-color
    color: vars.$menubar-font-color
    font-size: $microtip-font-size
    line-height: $microtip-font-size
    border-radius: 50%
    cursor: vars.$pointer-cursor
    display: flex
    align-items: center
    justify-content: center
    border: vars.$border-thickness solid vars.$primary-button-color
    transition: background vars.$transition-half ease-in-out

    svg
      // Make 'X' icon in close button 75% smaller than button ($microtip-font-size * 0.75)
      width: 75%
      height: 75%

    &:hover
      background: vars.$primary-button-color
      border: vars.$border-thickness solid vars.$secondary-button-color

  &-container
    opacity: $badge-opacity
    align-self: center // Center vertically
    transition: opacity vars.$transition-half ease-in-out
    width: auto

    &:hover
      opacity: 1.0

// Separates apps and trash
.dock-divider
  border-left: 0.14rem solid rgba(255, 255, 255, 0.15)
  color: vars.$font-color
  margin: 0 vars.$padding-half 0 vars.$padding

footer
  position: fixed
  bottom: vars.$padding
  width: 100%
  display: grid
  grid-template-columns: repeat(3, 1fr)
  justify-content: center

  a
    display: grid // Needed to vertically center the 'Not by AI' badge since <svg id="not-ai">'s parent is a <a> element

#dock
  border: vars.$border-thickness-2x solid rgba(255, 255, 255, 0.05)
  padding: $dock-padding
  z-index: 10
  grid-auto-flow: column
  justify-self: center
  background: vars.$dock-menu-background
  display: grid
  border-radius: $dock-border-radius
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25)
  backdrop-filter: blur(1.3rem)
  @include mix.disable-select()
  
  .icon
    width: vars.$dock-icon-size
    display: grid
    align-content: center
    justify-content: stretch
    place-items: center
    grid-template-columns: repeat(auto-fit, minmax(calc(1.0 * vars.$dock-icon-size), 1fr)) // 1
    grid-template-rows: 1

    // Compatibility with IE
    > *:nth-child(1)
      grid-row: 1
      grid-column: repeat(auto-fit, minmax(calc(1.0 * vars.$dock-icon-size), 1fr)) // 1

    img
      grid-column: 1 / -1
      grid-row: 1 / -1
      width: 100%
      height: 100%
      max-height: 100%
      object-fit: cover
      image-rendering: smooth
      @include mix.disable-select()

      &:active
        filter: brightness(75%)

// Tooltip
[aria-label][role~="tooltip"]
  position: relative

  &::before, &::after
    backface-visibility: hidden
    will-change: transform
    opacity: 0
    pointer-events: none
    position: absolute
    z-index: 100
    transform-origin: top
    bottom: 100%
    left: 50%
    box-sizing: border-box
    transform: translate3d(-50%, 0, 0)
    transition: all vars.$transition-half ease-in-out 0s

  &::before
    background-size: 100% auto !important
    content: ""
    background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2847%2C%2048%2C%2036%2C%20.88%29%22%20transform%3D%22rotate%280%29%22%20d%3D%22M2.658%2C0.000%20C-13.615%2C0.000%2050.938%2C0.000%2034.662%2C0.000%20C28.662%2C0.000%2023.035%2C12.002%2018.660%2C12.002%20C14.285%2C12.002%208.594%2C0.000%202.658%2C0.000%20Z%22%2F%3E%3C%2Fsvg%3E") no-repeat
    height: 0.6rem
    width: 1.8rem
    margin-bottom: 0.9rem

  &::after
    background: $microtip-bg-color
    //border: vars.$border-thickness solid rgba(75, 77, 75, .9)
    color: #ffffff
    content: attr(aria-label)
    font-size: $microtip-font-size
    font-weight: normal
    text-transform: none
    padding: 0.25em 0.75em
    white-space: nowrap
    margin-bottom: 1.5rem
    box-sizing: border-box
    border-radius: 0.4rem

  &:hover, &:focus
    &::before, &::after
      opacity: 1
      pointer-events: auto

  &:hover
    &::before, &::after
      transform: translate3d(-50%, -0.5rem, 0)

